Request trailer available on both filters and responders.